app/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

/*---Media Queries --*/
@media (max-width: 992px) {

  }
@media (max-width: 768px) {

}
@media (max-width: 576px) {

}
/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Fixed Background Image --*/
figure {
  position: relative;
  width: 100%;
  height: 60%;
  margin: 0!important;
}
.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url('img/mac.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}

/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/


/* CUSTOM CSS */

html, body {
  height: 100%;
  width: 100%;
  font-family: Arial, Helvetica, sans-serif;
}

/* HEADER */

.navbar{
  font-family: 'AvenirNext-Bold',Helvetica,Arial,serif;
  padding: .8rem;
  background-color: rgba(12,102,82,1.0);
  border-bottom: solid 19px rgba(247,231,27,1.0);
}
.navbar-nav li {
  padding-right: 15px;
}
.nav-link {
  font-size: 1.2em;
  color: white;
}

/* FOOTER */

footer{
  background-color: rgba(12,102,82,1.0);
  color: white;
  padding: 2%;
  font-size: 0.8em;
  line-height: 5px;
  border-top: solid 19px rgba(247,231,27,1.0);
  font-family: 'AvenirNext-Medium',Helvetica,Arial,serif;
}
.footer_icons{
  padding: 1% 5% 1% 0%;
}
.nav {
  width: 100%;
}
.nav ul {
  list-style-type: none;
  overflow: hidden;
}
.nav li {
  float: right;
  display: inline-block;
  margin-right: 35px;
}
.nav li a {
  color: white;
  text-decoration: none;
  line-height: 20px;
}
#yellow_txt {
  color: rgba(247,231,27,1.0);
}
#purple_txt {
  color: rgba(247,231,27,1.0);
}
.footer_nav {
  border-top: white solid 1px;
  position: absolute;
  bottom: 0;
  right: 0;
  padding-top: 2%;
}
.footer_magazine{
  height: 215px;
  width: 160px;
}
.subscribe{
  width: 100%;
  background-color: rgba(215,215,215,1.0);
  height: 30px;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(150,150,150,1.0);
  opacity: .63;
  text-align: center;
  margin: 0 auto;
}
.footer_side_text {
  float: right;
  padding-bottom: 10%;
  line-height: 15px;
}

/* HOME top->bottom */

.carousel img {
  object-fit: cover;
  height: 450px;
  width: 100%;
}
.carousel_info_rect {
  background-color: rgba(49,47,47,1.0);
  border-style: solid;
  border-width: 1px;
  border-color: rgba(150,150,150,1.0);
  opacity: .3;
  position:absolute;
  height:90px;
  width:100%;
  top:300px;
}
.carousel_info_text {
  background-color: rgba(255,255,255,0.0);
  position:absolute;
  top:315px;
  margin-left:20px;
  text-align: center;
  color:white;
  width: auto;
  font-family: 'AvenirNext-Bold',Helvetica,Arial,serif;
  font-size: 2.8vw;
}
.carousel_info_text a {
  color:white;
  text-decoration: none;
}
.carousel_info_text a:hover {
  color:rgba(247,231,27,1.0);
}
.slick-initialized {
  overflow-x: hidden;
}
.introtext {
  font-family: 'AvenirNext-Medium',Helvetica,Arial,serif;
  padding: 2%;
  font-size: 1.4em;
  color: rgba(12,102,82,1.0);
}
.grey_backgroundcolour{
  background-color: rgba(215,215,215,0.5);
  padding: 2% 2% 5% 2%;
}
.pcv_block{
  padding: 15%;
  height: 100%;
  background-color: white;
  width: 100%;
  font-family: 'AvenirNext-DemiBold',Helvetica,Arial,serif;
}
.upw{
  margin-top: -42px;
  padding-bottom: 20%;
}
.findoutmore_background {
  background-color: rgba(143,18,253,1.0);
  height: auto;
  font-family: 'AvenirNext-DemiBold',Helvetica,Arial,serif;
  width: 100%;
  color: white;
  padding: 3%;
}
.display-4 {
  font-family: 'AvenirNext-DemiBold',Helvetica,Arial,serif;
  padding-top: 2%
}
.card {
  background-color: rgba(215,215,215,1.0);
  border-style: solid;
  border-width: 1px;
  border-color: rgba(150,150,150,1.0);
  height: 510px;
}
.card-img-top {
  object-fit: cover;
  height: 252px;
}


.featured_background{
  background-color: rgba(215,215,215,1.0);
  border-style: solid;
  border-width: 1px;
  border-color: rgba(150,150,150,1.0);
}
.subscribe_section{
  background-color: rgba(245,165,35,1.0);
  height: auto;
  width: 100%;
  font-family: 'AvenirNext-Bold',Helvetica,Arial,serif;
  color: rgba(0,0,0,1.0);
  line-height: 27.0px;
  padding: 2%;
}
.magazine_txt {
  font-size: 2.5em;
  font-family: 'AvenirNext-Bold',Helvetica,Arial,serif;
  color: rgba(245,165,35,1.0);
  text-align: right;
}
.magazine_email {
  background-color: rgba(215,215,215,1.0);
  height: 43px;
  width: 100%;
  border-radius: 8px;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(150,150,150,1.0);
  opacity: .33;
}
.magazine_box {
  background-color: rgba(143,18,253,1.0);
  border-radius: 8px;
  opacity: .76;
  height: auto;
  width: auto;
  font-family: 'AvenirNext-Bold',Helvetica,Arial,serif;
  font-size: 2em;
  color: rgba(247,231,27,1.0);
  line-height: 32.0px;
  padding: 5%;
}
.contactus_text{
  line-height: 10px;
}
.contactus_img{
  border: #D3D3D3 2px solid;
}
.founding_img {
  background-color: rgba(245, 165, 35, 1.0);
  height: 98px;
  width: 98px;
}

